--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>One Month Rails</title>
+    <title>toplot.it</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
@@ -9,9 +9,13 @@
   </head>
   <body>
       <%= render 'layouts/header' %>
-    <div class="container">
+      
+      <div class="container">
+        <% flash.each do |name, msg| %>
+          <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+      <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
-  </div>
+    </div>
   </body>
 </html>
