--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>
-  <%= link_to "One Month Rails", "http://onemonthrails.com" %>
-  is a project to teach 
-  <%= link_to "Ruby on Rails", "http://rubyonrails.org" %>
-  in one month. This is the sample application.
+  <%= link_to "toplot.it", "#" %>
+  is a site that allows you to share you favorite
+  <%= link_to "things", "#" %>
+  with your friends.
 </p>
